--- a/AuthApi/appsettings.Development.json
+++ b/AuthApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-14FE87F\\SQLEXPRESS;Database=Auth;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
