--- a/AuthApi/appsettings.Development.json
+++ b/AuthApi/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-14FE87F\\SQLEXPRESS;Database=Auth;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "KeyForProjecttcejorProFyeKKeyForProjecttcejorProFyeK",
+    "Issuer": "IssuerForProjecttcejororFreussI",
+    "Audience": "AudienceForProjecttcejorPorFecneiduA"
   }
 }
