--- a/auth-client/package.json
+++ b/auth-client/package.json
@@ -15,6 +15,7 @@
 		"@reduxjs/toolkit": "^2.5.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.469.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
